// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer[Base] should render correctly about base 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="c5wkfol soui-button-secondary c871ech soui-button-button"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="cvrrn77 soui-button-primary c871ech soui-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about close 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Modal Title
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        The prop maskCloseAble is  
        false
        .
        <br />
        You must click the button to close the Modal.
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
          type="button"
        >
          <span>
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about container 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        Drawer mount after Button
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="c5wkfol soui-button-secondary c871ech soui-button-button"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="cvrrn77 soui-button-primary c871ech soui-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about form 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 456px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        <form
          class="cahcxte soui-form-wrapper"
          style="max-width: 400px;"
        >
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <div>
          <button
            class="c5wkfol soui-button-secondary c871ech soui-button-button"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="cvrrn77 soui-button-primary c871ech soui-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about full screen 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cwiclq6 soui-modal-wrapper-full-screen cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Profile
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        <div>
          <form
            class="cahcxte soui-form-wrapper"
          >
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Name
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-hrv5q2 soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                  >
                    <input
                      class="cyq698d soui-input-input"
                      placeholder="please input name"
                      value="zhangsan"
                    />
                    <div
                      class="c80o52r soui-input-clear-wrapper"
                    >
                      <span
                        class="cymtz28 soui-input-clear"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Password
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-hrv5q2 soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                  >
                    <input
                      class="cyq698d soui-input-input"
                      placeholder="please input password"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Email
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-hrv5q2 soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                  >
                    <input
                      class="cyq698d soui-input-input"
                      placeholder="please input email"
                      value="zhangsan@qq.com"
                    />
                    <div
                      class="c80o52r soui-input-clear-wrapper"
                    >
                      <span
                        class="cymtz28 soui-input-clear"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 23C5.924 23 1 18.076 1 12C1 5.924 5.924 1 12 1C18.076 1 23 5.924 23 12C23 18.076 18.076 23 12 23Z"
                            fill="currentColor"
                          />
                          <path
                            d="M9.6129 8.2097C9.22061 7.90468 8.65338 7.93241 8.29289 8.29289C7.90237 8.68342 7.90237 9.31658 8.29289 9.70711L10.413 11.828L8.29289 13.9497L8.2097 14.044C7.90468 14.4362 7.93241 15.0035 8.29289 15.364C8.68342 15.7545 9.31658 15.7545 9.70711 15.364L11.828 13.242L13.9497 15.364L14.044 15.4471C14.4362 15.7522 15.0035 15.7244 15.364 15.364C15.7545 14.9734 15.7545 14.3403 15.364 13.9497L13.242 11.828L15.364 9.70711L15.4471 9.6129C15.7522 9.22061 15.7244 8.65338 15.364 8.29289C14.9734 7.90237 14.3403 7.90237 13.9497 8.29289L11.828 10.413L9.70711 8.29289L9.6129 8.2097Z"
                            fill="white"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Gendar
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-ggxw0v soui-radio-group"
                >
                  <div
                    class="cx6oiet soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="c-smsfdq soui-radio-indicator-wrapper"
                    >
                      <span
                        class="c-cz3aa7 soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-iv35qp soui-radio-desc"
                    >
                      male
                    </span>
                  </div>
                  <div
                    class="cx6oiet soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="c-smsfdq soui-radio-indicator-wrapper"
                    >
                      <span
                        class="c-cz3aa7 soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-iv35qp soui-radio-desc"
                    >
                      female
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Course
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="ctq0nzz soui-checkbox-group"
                >
                  <div
                    class="cunqq37 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-y0qqnw soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="c-ph6h2p soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-lyf2wf soui-checkbox-desc"
                    >
                      chinese
                    </span>
                  </div>
                  <div
                    class="cunqq37 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-y0qqnw soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="c-ph6h2p soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-lyf2wf soui-checkbox-desc"
                    >
                      maths
                    </span>
                  </div>
                  <div
                    class="cunqq37 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-y0qqnw soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="c-ph6h2p soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-lyf2wf soui-checkbox-desc"
                    >
                      english
                    </span>
                  </div>
                  <div
                    class="cunqq37 soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="c-y0qqnw soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="c-ph6h2p soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="c-lyf2wf soui-checkbox-desc"
                    >
                      physics
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Enrollment date
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-2v34me soui-datePicker-wrapper"
                  data-soui-input-border="true"
                  data-soui-type="date"
                >
                  <div
                    class="c-7leq83 soui-datePicker-result-wrapper c-lpv8gc soui-datePicker-wrapper-padding-box c6pdztl soui-datePicker-wrapper-inner-title-top c8gw12f soui-datePicker-wrapper-inner-title-bottom"
                    tabindex="1"
                  >
                    <div
                      class="c-9iu7ey soui-datePicker-result"
                    >
                      <div
                        class="c-7mbtio soui-datePicker-result-text-wrapper"
                      >
                        <div
                          class="c1s4v9f soui-datePicker-result-text"
                        >
                          <div
                            class="cnosb4e soui-datePicker-result-text-padding"
                          >
                            <span
                              class="c35bvay soui-datePicker-placeholder"
                            >
                              please select date
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="cp46mj6 soui-datePicker-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M17 1C17.5523 1 18 1.44772 18 2V3H21C22.1046 3 23 3.89543 23 5V20C23 21.1046 22.1046 22 21 22H3C1.89543 22 1 21.1046 1 20V5C1 3.89543 1.89543 3 3 3H6V2C6 1.44772 6.44772 1 7 1C7.55228 1 8 1.44772 8 2V3H16V2C16 1.44772 16.4477 1 17 1ZM21 10H3V20H21V10ZM7 16C7.82843 16 8.5 16.6716 8.5 17.5C8.5 18.3284 7.82843 19 7 19C6.17157 19 5.5 18.3284 5.5 17.5C5.5 16.6716 6.17157 16 7 16ZM12 16C12.8284 16 13.5 16.6716 13.5 17.5C13.5 18.3284 12.8284 19 12 19C11.1716 19 10.5 18.3284 10.5 17.5C10.5 16.6716 11.1716 16 12 16ZM17 16C17.8284 16 18.5 16.6716 18.5 17.5C18.5 18.3284 17.8284 19 17 19C16.1716 19 15.5 18.3284 15.5 17.5C15.5 16.6716 16.1716 16 17 16ZM7 11C7.82843 11 8.5 11.6716 8.5 12.5C8.5 13.3284 7.82843 14 7 14C6.17157 14 5.5 13.3284 5.5 12.5C5.5 11.6716 6.17157 11 7 11ZM12 11C12.8284 11 13.5 11.6716 13.5 12.5C13.5 13.3284 12.8284 14 12 14C11.1716 14 10.5 13.3284 10.5 12.5C10.5 11.6716 11.1716 11 12 11ZM17 11C17.8284 11 18.5 11.6716 18.5 12.5C18.5 13.3284 17.8284 14 17 14C16.1716 14 15.5 13.3284 15.5 12.5C15.5 11.6716 16.1716 11 17 11ZM6 5H3V8H21V5H18C18 5.55228 17.5523 6 17 6C16.4477 6 16 5.55228 16 5H8C8 5.55228 7.55228 6 7 6C6.44772 6 6 5.55228 6 5Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Score
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="cuzpkeu soui-rate-wrapper"
                >
                  <div
                    class="c-hjwq1z soui-rate-inner"
                  >
                    <div
                      class="c-55ct8w soui-rate-item c-3p7fc9 soui-rate-item-checked"
                    >
                      <span
                        class="co6v5n9 soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-e5727b soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="c-55ct8w soui-rate-item c-3p7fc9 soui-rate-item-checked"
                    >
                      <span
                        class="co6v5n9 soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-e5727b soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="c-55ct8w soui-rate-item c-3p7fc9 soui-rate-item-checked"
                    >
                      <span
                        class="co6v5n9 soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-e5727b soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="c-55ct8w soui-rate-item"
                    >
                      <span
                        class="co6v5n9 soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-e5727b soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="c-55ct8w soui-rate-item"
                    >
                      <span
                        class="co6v5n9 soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="c-e5727b soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                upload avatar
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="c-9vspbf soui-upload-wrapper c-vvtawq soui-upload-wrapper-image"
                >
                  <span
                    class="cvu9x0t soui-upload-image-handler"
                    style="width: 80px; height: 80px;"
                  >
                    <div
                      class="chzpe9y soui-upload-image-handler-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12.0317 4C12.5445 4.00067 12.9667 4.38727 13.0238 4.88468L13.0303 5.00131L13.022 11H19C19.5523 11 20 11.4477 20 12C20 12.5128 19.614 12.9355 19.1166 12.9933L19 13H13.02L13.012 19.0013C13.0113 19.5536 12.563 20.0007 12.0107 20C11.4979 19.9993 11.0757 19.6127 11.0186 19.1153L11.012 18.9987L11.02 13H5C4.44772 13 4 12.5523 4 12C4 11.4872 4.38604 11.0645 4.88338 11.0067L5 11H11.022L11.0304 4.99869C11.0311 4.44641 11.4794 3.99928 12.0317 4Z"
                        />
                      </svg>
                    </div>
                    <input
                      accept="image/*"
                      style="display: none;"
                      type="file"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="ctj82yd soui-form-item-label"
              >
                Address
              </div>
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="cf4qlmk soui-textarea-wrapper"
                  data-soui-input-border="true"
                >
                  <textarea
                    class="c-cgqu3u soui-textarea-wrapper-padding-box cjw0ccp soui-textarea-wrapper-inner-title-bottom c-achhjj soui-textarea-textarea"
                    rows="4"
                  />
                </div>
              </div>
            </div>
            <div
              class="c-2qr3xo soui-form-item-wrapper"
              data-soui-status="default"
              style="margin-top: 32px; margin-bottom: 0px;"
            >
              <div
                class="ctj82yd soui-form-item-label"
              />
              <div
                class="c-de5iaq soui-form-item-control"
                data-soui-role="form-control"
              >
                <button
                  class="cvrrn77 soui-button-primary c871ech soui-button-button"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
                <button
                  class="c5wkfol soui-button-secondary c871ech soui-button-button"
                  type="reset"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="cvrrn77 soui-button-primary c871ech soui-button-button"
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about hide mask 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask c-j60h5b soui-modal-wrapper-hide-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="c5wkfol soui-button-secondary c871ech soui-button-button"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="cvrrn77 soui-button-primary c871ech soui-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about position 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        <form
          class="cahcxte soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <div>
          <button
            class="c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="cvrrn77 soui-button-primary c871ech soui-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about resizable 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body"
      >
        <form
          class="cahcxte soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="c-2qr3xo soui-form-item-wrapper c-olek8d soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="ctj82yd soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="c-de5iaq soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="c-hrv5q2 soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="coq2iel soui-input-wrapper-inner-title-top ctgjlqr soui-input-wrapper-inner-title-bottom c-2bhp9c soui-input-wrapper-padding-box c-sf9tqs soui-input-content"
                >
                  <input
                    class="cyq698d soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <div>
          <button
            class="c5wkfol soui-button-secondary c871ech soui-button-button ciojhir soui-button-outline"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="cvrrn77 soui-button-primary c871ech soui-button-button"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
      <div
        class="cx7xetw soui-modal-resize-x"
        data-position="right"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about type 1`] = `
<div
  class="c-tki81p soui-modal-wrapper c-l9lx4v soui-modal-wrapper-animation cp0xsv4 soui-modal-wrapper-show c-xzvnl3 soui-modal-wrapper-is-mask cyntpjo soui-modal-wrapper-drawer c4ssyco soui-modal-wrapper-drawer-right"
>
  <div
    class="cmpj0l8 soui-modal-mask"
  >
    <div
      class="c-6a3rgs soui-modal-panel"
      style="width: 500px;"
    >
      <div
        class="cenpe1p soui-modal-header"
      >
        <span
          class="c-b3d3t6 soui-modal-header-icon c-ru57pk soui-alert-icon co3m3nh soui-alert-success-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
            />
          </svg>
        </span>
        <div
          class="cbffny3 soui-modal-header-title"
        >
          Drawer Title with success Icon
        </div>
        <div
          class="cb64za3 soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M4.6129 3.2097L4.70711 3.29289L12 10.585L19.2929 3.29289C19.6834 2.90237 20.3166 2.90237 20.7071 3.29289C21.0676 3.65338 21.0953 4.22061 20.7903 4.6129L20.7071 4.70711L13.415 12L20.7071 19.2929C21.0976 19.6834 21.0976 20.3166 20.7071 20.7071C20.3466 21.0676 19.7794 21.0953 19.3871 20.7903L19.2929 20.7071L12 13.415L4.70711 20.7071C4.31658 21.0976 3.68342 21.0976 3.29289 20.7071C2.93241 20.3466 2.90468 19.7794 3.2097 19.3871L3.29289 19.2929L10.585 12L3.29289 4.70711C2.90237 4.31658 2.90237 3.68342 3.29289 3.29289C3.65338 2.93241 4.22061 2.90468 4.6129 3.2097Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cmpc9rm soui-modal-body cmt28s1 soui-modal-body-with-icon"
      >
        <span>
          Drawer type: 
        </span>
        <b>
          success
        </b>
      </div>
      <div
        class="cdvdcvf soui-modal-footer"
      >
        <button
          class="c5wkfol soui-button-secondary c871ech soui-button-button"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="cvrrn77 soui-button-primary c871ech soui-button-button"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
